--- a/infrastructure-base/overlays/mu/kustomization.yaml
+++ b/infrastructure-base/overlays/mu/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 resources:
   - ../../base/metrics-server
   - ../../base/o11y
+  - ../../base/dragonfly
 
 patches:
   - path: ./patches/metrics-server.release.yml
@@ -14,3 +15,11 @@ patches:
       kind: HelmRelease
       name: metrics-server
       namespace: kube-system
+
+  - path: ./patches/dragonfly.release.yml
+    target:
+      group: helm.toolkit.fluxcd.io
+      version: v2beta1
+      kind: HelmRelease
+      name: dragonfly
+      namespace: dragonfly-system
