--- a/sources/kustomization.yaml
+++ b/sources/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - metrics-server.yaml
   - dragonfly.yaml
   - stackgres.yaml
-  # - prometheus-community.yaml
+  - prometheus-community.yaml
   # - grafana.yaml
   # - external-dns.yaml
   # - external-secrets.yaml
