--- a/infrastructure-base/base/o11y/kustomization.yaml
+++ b/infrastructure-base/base/o11y/kustomization.yaml
@@ -3,4 +3,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - prometheus-operator-crds.release.yaml
+  - kube-prometheus-stack.release.yaml
