--- a/applications/base/decidim/decidim-db.sgcluster.yaml
+++ b/applications/base/decidim/decidim-db.sgcluster.yaml
@@ -3,6 +3,7 @@ apiVersion: stackgres.io/v1
 kind: SGCluster
 metadata:
   name: decidim-db
+  namespace: decidim
 spec:
   instances: 1
   postgres:
