--- a/infrastructure-base/base/o11y/kustomization.yaml
+++ b/infrastructure-base/base/o11y/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - kube-prometheus-stack.release.yaml
+  - otel-collector.sa.yaml
+  - otel-operator.release.yaml
