--- a/infrastructure-base/overlays/mu/kustomization.yaml
+++ b/infrastructure-base/overlays/mu/kustomization.yaml
@@ -39,7 +39,7 @@ patches:
       group: helm.toolkit.fluxcd.io
       version: v2beta1
       kind: HelmRelease
-      name: kube-prometheus-stack
+      name: otel-operator
       namespace: o11y
 
   - path: ./patches/cert-manager.release.yml
