--- a/infrastructure-base/base/o11y/otel-operator.release.yaml
+++ b/infrastructure-base/base/o11y/otel-operator.release.yaml
@@ -21,3 +21,7 @@ spec:
     admissionWebhooks:
       certManager:
         enabled: true
+
+dependsOn:
+  - name: cert-manager
+    namespace: cert-manager
