commit about doppler

--- a/secrets/overlays/kind-local/patches/stores/Store-doppler.yaml
+++ b/secrets/overlays/kind-local/patches/stores/Store-doppler.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
-  name: doppler-auth-api
+  name: secrets
 spec:
   provider:
     doppler:
