--- a/clusters/mu/secrets.yaml
+++ b/clusters/mu/secrets.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./secrets/overlays/mu
+  path: ./secrets/overlays/kind-local
   prune: true
   sourceRef:
     kind: GitRepository
