--- a/secrets/base/stores/doppler/Store-doppler.yaml
+++ b/secrets/base/stores/doppler/Store-doppler.yaml
@@ -1,12 +1,12 @@
 apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
-  name: doppler-auth-api
+  name: secrets
 spec:
   provider:
     doppler:
       auth:
         secretRef:
           dopplerToken:
-            name: doppler-token-auth-api
-            key: token
+            name: decidim-token
+            key: decidim-token
