--- a/secrets/overlays/kind-local/patches/stores/Store-doppler.yaml
+++ b/secrets/overlays/kind-local/patches/stores/Store-doppler.yaml
@@ -8,5 +8,5 @@ spec:
       auth:
         secretRef:
           dopplerToken:
-            name: doppler-token-auth-api
-            key: token
+            name: decidim-token
+            key: decidim-token
