--- a/secrets/overlays/kind-local/kustomization.yaml
+++ b/secrets/overlays/kind-local/kustomization.yaml
@@ -5,6 +5,8 @@ kind: Kustomization
 resources:
   - ../../base/stores
   - ../../base/secrets/github-actions-runner-app
+  - ../../base/secrets/doppler
+  - ../../base/secrets/vault
 
 
 patchesJson6902:
@@ -24,3 +26,33 @@ patchesJson6902:
       kind: ExternalSecret
       namespace: actions-runner-system
       name: github-actions-runner-app
+
+  - path: ./patches/stores/doppler/Store-doppler.yaml
+    target:
+      group: external-secrets.io
+      version: v1beta1
+      kind: ClusterSecretStore
+      namespace: external-secrets
+      name: Store-doppler
+
+  - path: ./patches/secrets/doppler/Secrets-doppler.yaml
+    target:
+      group: external-secrets.io
+      version: v1beta1
+      kind: ExternalSecret
+      name: Secrets-doppler
+
+  - path: ./patches/stores/vault/Store-doppler.yaml
+    target:
+      group: external-secrets.io
+      version: v1beta1
+      kind: ClusterSecretStore
+      namespace: external-secrets
+      name: Store-vault
+
+  - path: ./patches/secrets/vault/Secrets-vault.yaml
+    target:
+      group: external-secrets.io
+      version: v1beta1
+      kind: ExternalSecret
+      name: Secrets-vault
